Adding util for no scrollbar

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,3 +4,12 @@
 @import './prism.css';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
